# typed-configparser

./: .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  pyproject.toml
tests/: test_loader.py
typed_configparser/: __init__.py  casting.py  errors.py  loader.py
typed_configparser.egg-info/: PKG-INFO  SOURCES.txt
