[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typed-configparser"
version = "0.1.0"
description = "A typed, validated wrapper around Python's built-in configparser"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Pierre", email = "pierrebruno@hotmail.ch"},
]
keywords = ["config", "ini", "configparser", "typed", "dataclass", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = ["typed_configparser"]

[tool.setuptools.package-data]
typed_configparser = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

